refactor(iam): restructure auth usecases, avatar storage, rate limiting, and email notifications